python/testData/inspections/PyUnresolvedReferencesInspection/NamespacePackageNameDoesntMatchFileName/a.py
from google.protobuf import service
from <error descr="Unresolved reference 'foo'">foo</error>.<warning descr="Unresolved reference 'bar'">bar</warning> import <error descr="Unresolved reference 'baz'">baz</error>

print(service.Service)
print(baz.Baz)
